# local-inference-pool

./: README.md  pyproject.toml
docs/: CONSUMER_GUIDE.md
local_inference_pool/: __init__.py  config.py  dispatcher.py  exceptions.py  pool.py
tests/: test_dispatcher.py  test_pool.py
