[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-inference-pool"
version = "0.1.0"
description = "Multi-server GPU slot management for OpenAI-compatible inference backends"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Shane Cantwell"}
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
